# devgraph_os

./: .devgraphignore  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  devgraph.toml  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
apps/dashboard/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/vscode-extension/: package.json  tsconfig.json
devgraph/: __init__.py  cli.py  config.py  constants.py  logging.py
devgraph/core/: __init__.py  errors.py  graph_store.py  ids.py  migrations.py  provenance.py  schema.py  snapshots.py
devgraph/exports/: graphml.py  json_export.py  markdown_wiki.py  neo4j.py  obsidian.py
devgraph/extractors/: __init__.py  base.py  registry.py
devgraph/integrations/: __init__.py  claude.py  codex.py  copilot.py  cursor.py  gemini.py  generic.py
devgraph/intelligence/: __init__.py  architecture.py  communities.py  compat.py  debug.py  explain.py  flows.py  handoff.py  knowledge.py  migration_risk.py  onboard.py  refactor.py  review.py  risk.py
devgraph/retrieval/: __init__.py  chunking.py  context_packer.py  embeddings.py  ranking.py  search.py  token_budget.py
devgraph/server/: __init__.py  http_server.py  mcp_server.py
devgraph/update/: __init__.py  diff_parser.py  fingerprints.py  git.py  ignore.py  incremental.py  watcher.py
docs/: ARCHITECTURE.md  COMMANDS.md  CONTEXT_ENGINE.md  DASHBOARD.md  EXAMPLES.md  GRAPH_SCHEMA.md  INDEX.md  MCP.md  ROADMAP.md  SECURITY_MODEL.md  VSCODE_EXTENSION.md  frameworks.md
docs/migration-guides/: v1.1-to-v1.2.md
(+186 files in other folders)
